# namegen

./: README.md  setup.cfg
namegen/: names.py
