[metadata]
name = namegen
version = 1.0.0
author = Jason Dobies
description = Simple name generator for things like sample data
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
